--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "test:action:creators": "jest __tests__/actions.test.js",
     "test:reducers": "jest __tests__/reducers.test.js",
     "test:users:component": "jest __tests__/users.test.js",
-    "update:packages": "rm -rf node_modules && npm update --save-dev && npm update --save"
+    "unit:test": "tap test/unit-tests/*.js",
+    "integration:test": "tap test/integration-tests/*.js",
+    "update:packages": "rm -rf node_modules && npm update --save-dev && npm update --save",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "e2e": "node --harmony test/nightwatch.runner.js",
+    "posttest": "nyc report --reporter=text-lcov",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -56,6 +63,7 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -89,6 +97,7 @@
     "react-test-renderer": "^15.4.2",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
+    "tap": "^10.1.0",
     "webpack": "^2.2.1"
   }
 }
