Update redundant class names and add travis and coveralls for builds.

--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "clean:build": "rimraf ./static/build",
     "predev": "npm run clean:build",
     "dev": "gulp dev",
+    "debug": "npm run clean:build && gulp debug",
     "build": "npm run clean:build && gulp build",
     "test": "jest",
     "test:action:creators": "jest __tests__/actions.test.js",
     "test:reducers": "jest __tests__/reducers.test.js",
     "test:users:component": "jest __tests__/users.test.js",
-    "unit:test": "tap test/unit-tests/*.js",
     "integration:test": "tap test/integration-tests/*.js",
     "update:packages": "rm -rf node_modules && npm update --save-dev && npm update --save",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint *.js routes/*.js models/*.js db/*.js config/*.js bin/www static/js/components/*.jsx static/js/actions/index.js static/js/constants/constants.js static/js/data/data.js static/js/reducers/*.js static/js/store/*.js static/js/utils/ajax.js",
+    "lint:fix": "eslint --fix *.js routes/*.js models/*.js db/*.js config/*.js bin/www static/js/components/*.jsx static/js/actions/index.js static/js/constants/constants.js static/js/data/data.js static/js/reducers/*.js static/js/store/*.js static/js/utils/ajax.js",
     "e2e": "node --harmony test/nightwatch.runner.js",
-    "posttest": "nyc report --reporter=text-lcov",
+    "tap:test": "tap test/unit/*.js test/integration/*.js",
+    "posttap:test": "nyc report --reporter=text-lcov",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
@@ -91,6 +92,7 @@
     "gulp-util": "^3.0.8",
     "jest": "^18.1.0",
     "merge-stream": "^1.0.1",
+    "nightwatch": "^0.9.12",
     "node-sass": "^4.5.0",
     "react-addons-test-utils": "^15.4.2",
     "react-redux": "^5.0.2",
