--- a/package.json
+++ b/package.json
@@ -110,5 +110,20 @@
     "selenium-server": "^3.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
+  },
+  "nyc": {
+    "reporter": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "exclude": [
+      "test/e2e/*",
+      "test/helpers/*",
+      "test/nightwatch.conf.js",
+      "test/nightwatch.runner.js",
+      "config/index.js",
+      "errorHandler.js"
+    ]
   }
 }
