--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "predev": "npm run clean:build",
     "dev": "gulp dev",
     "debug": "npm run clean:build && gulp debug",
-    "test": "jest",
+    "jest:test": "jest",
     "test:action:creators": "jest __tests__/actions.test.js",
     "test:reducers": "jest __tests__/reducers.test.js",
     "test:users:component": "jest __tests__/users.test.js",
     "e2e": "node --harmony test/nightwatch.runner.js",
     "ava:unit:test": "nyc ava test/unit/*.js",
     "ava:integration:test": "nyc ava test/integration-tests/*.js",
-    "ava:test": "nyc ava test/unit/*.js test/integration/*.js",
+    "test": "nyc ava test/unit/*.js test/integration/*.js",
     "postava:test": "nyc $npm_package_config_report",
     "lint": "eslint $npm_package_config_lint",
     "lint:fix": "eslint --fix $npm_package_config_lint",
@@ -124,6 +124,11 @@
       "test/nightwatch.runner.js",
       "config/index.js",
       "errorHandler.js"
+    ]
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/test/"
     ]
   }
 }
