--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^3.3.7",
     "chromedriver": "^2.27.2",
+    "coveralls": "^2.11.16",
     "dotenv": "^4.0.0",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
