--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "jest": "^18.1.0",
     "merge-stream": "^1.0.1",
     "nightwatch": "^0.9.12",
+    "nock": "^9.0.5",
     "node-sass": "^4.5.0",
     "nyc": "^10.1.2",
     "react-addons-test-utils": "^15.4.2",
@@ -110,6 +111,8 @@
     "sass-loader": "^5.0.1",
     "selenium-server": "^3.0.1",
     "style-loader": "^0.13.1",
+    "supertest": "^3.0.0",
+    "testdouble": "^1.11.1",
     "webpack": "^2.2.1"
   },
   "nyc": {
