--- a/package.json
+++ b/package.json
@@ -3,29 +3,9 @@
   "version": "0.1.0",
   "description": "React/Redux workshop for Advanced Tech in Wilmington",
   "main": "index.js",
-  "config": {
-    "lint": "*.js routes/*.js models/*.js db/*.js config/*.js bin/www static/js/components/*.jsx static/js/actions/index.js static/js/constants/constants.js static/js/data/data.js static/js/reducers/*.js static/js/store/*.js static/js/utils/ajax.js",
-    "report": "report --reporter=text-lcov"
-  },
   "scripts": {
-    "build": "npm run clean:build && gulp build",
-    "clean:build": "rimraf ./static/build",
-    "predev": "npm run clean:build",
-    "dev": "gulp dev",
-    "debug": "npm run clean:build && gulp debug",
-    "jest:test": "jest",
-    "test:action:creators": "jest __tests__/actions.test.js",
-    "test:reducers": "jest __tests__/reducers.test.js",
-    "test:users:component": "jest __tests__/users.test.js",
-    "e2e": "node --harmony test/nightwatch.runner.js",
-    "ava:unit:test": "nyc ava test/unit/*.js",
-    "ava:integration:test": "nyc ava test/integration/*.js",
-    "test": "nyc ava test/unit/*.js test/integration/*.js",
-    "postava:test": "nyc $npm_package_config_report",
-    "lint": "eslint $npm_package_config_lint",
-    "lint:fix": "eslint --fix $npm_package_config_lint",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "update:packages": "rm -rf node_modules && npm update --save-dev && npm update --save"
+    "prebuild:reveal": "./scripts/clean.sh",
+    "build:reveal": "./scripts/build.sh"
   },
   "repository": {
     "type": "git",
@@ -43,96 +23,8 @@
     "url": "https://github.com/jbelmont/advanced-tech-in-wilmington-react-app/issues"
   },
   "homepage": "https://github.com/jbelmont/advanced-tech-in-wilmington-react-app#readme",
-  "dependencies": {
-    "body-parser": "^1.16.1",
-    "consolidate": "^0.14.5",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^2.0.0",
-    "express": "^4.14.1",
-    "hbs": "^4.0.1",
-    "morgan": "^1.8.1",
-    "object-assign": "^4.1.1",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0",
-    "request": "^2.79.0",
-    "rethinkdb": "^2.3.3",
-    "rimraf": "^2.5.4",
-    "run-sequence": "^1.2.2",
-    "serve-favicon": "^2.3.2",
-    "winston": "^2.3.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ava": "^0.18.1",
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.22.0",
-    "bootstrap": "^3.3.7",
-    "chromedriver": "^2.27.2",
-    "coveralls": "^2.11.16",
-    "dotenv": "^4.0.0",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8",
-    "jest": "^18.1.0",
-    "merge-stream": "^1.0.1",
-    "nightwatch": "^0.9.12",
-    "nock": "^9.0.5",
-    "node-sass": "^4.5.0",
-    "nyc": "^10.1.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-test-renderer": "^15.4.2",
-    "sass-loader": "^5.0.1",
-    "selenium-server": "^3.0.1",
-    "style-loader": "^0.13.1",
-    "supertest": "^3.0.0",
-    "testdouble": "^1.11.1",
-    "webpack": "^2.2.1"
-  },
-  "nyc": {
-    "reporter": [
-      "text",
-      "lcov",
-      "html"
-    ],
-    "exclude": [
-      "test/e2e/*",
-      "test/helpers/*",
-      "test/nightwatch.conf.js",
-      "test/nightwatch.runner.js",
-      "config/index.js",
-      "errorHandler.js"
-    ]
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/test/"
-    ]
+    "reveal.js": "^3.4.1"
   }
 }
