--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,5 @@ language: node_js
 node_js:
   - 6
 sudo: false
-before_install:
-  - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
-  - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
-  - sudo apt-get update -q
-  - sudo apt-get -y --force-yes install rethinkdb
+  rethinkdb: '2.3.5'
 after_success: "npm run coveralls"
