--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0",
+    "bluebird": "^3.4.7",
     "bootstrap": "^3.3.7",
     "chromedriver": "^2.27.2",
     "coveralls": "^2.11.16",
